--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-google-signin",
-  "version": "0.11.0",
+  "name": "@housing/react-native-google-signin",
+  "version": "1.0.0",
   "description": "Google Signin for your react native applications",
   "main": "index.js",
   "author": {
